<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>io.github.learnjpahibernate</groupId>
	<artifactId>learn-jpa-hibernate</artifactId>
	<version>0.0.3-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>learn-jpa-hibernate</name>
	<description>Learn JPA Hibernate</description>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.0.0</version>
		<relativePath />
	</parent>

	<properties>
		<java.version>21</java.version>

		<!-- OVERRIDE: Latest version that works for now -->
		<aspectj.version>1.9.22</aspectj.version>

		<!-- OVERRIDE: Bog fix needed, remove when fixed in spring -->
    	<jackson-bom.version>3.0.3</jackson-bom.version>

		<!-- Project versions -->
		<aspectj-plugin.version>1.14.1</aspectj-plugin.version>
		<blaze-persistence.version>1.6.17</blaze-persistence.version>
		<hibernate-search.version>8.1.2.Final</hibernate-search.version>
		<narayana.version>4.0.0.Beta1</narayana.version>
		<eclipselink.version>5.0.0-B11</eclipselink.version>
		<openjpa.version>4.1.1</openjpa.version>
	</properties>

	<modules>
		<module>learn-jpa-hibernate-java2ddl</module>
		<module>learn-jpa-hibernate-ddl2java</module>
		<module>learn-jpa-hibernate-equals-and-hashcode</module>
		<module>learn-jpa-hibernate-relationships</module>
		<module>learn-jpa-hibernate-entity-graphs</module>
		<module>learn-jpa-hibernate-multiple-datasources</module>
		<module>learn-jpa-hibernate-extended-repository</module>
		<module>learn-jpa-hibernate-mapped-super-class</module>
		<module>learn-jpa-hibernate-3rd-party-classes</module>
		<module>learn-jpa-hibernate-L2-caching</module>
		<module>learn-jpa-hibernate-batch-operations</module>
		<module>learn-jpa-hibernate-bulk-operations</module>
		<module>learn-jpa-hibernate-active-record-aspects</module>
		<module>learn-jpa-hibernate-active-record-example</module>
		<module>learn-jpa-hibernate-swap-in-openjpa</module>
		<module>learn-jpa-hibernate-swap-in-eclipselink</module>
		<module>learn-jpa-hibernate-search</module>
		<module>learn-jpa-hibernate-blaze</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>net.ttddyy</groupId>
				<artifactId>datasource-proxy</artifactId>
				<version>1.10</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>net.ttddyy</groupId>
				<artifactId>datasource-assert</artifactId>
				<version>1.0</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.apache.maven.plugins</groupId>
										<artifactId>maven-antrun-plugin</artifactId>
										<versionRange>[1.0,)</versionRange>
										<goals>
											<!-- plugin goals -->
											<goal>run</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<!-- just ignore the plugin -->
										<ignore />
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<!-- Use fork of plugin that supports Java 11 for now -->
										<!-- <groupId>org.codehaus.mojo</groupId> -->
										<groupId>dev.aspectj</groupId>
										<artifactId>aspectj-maven-plugin</artifactId>
										<versionRange>[1.13.1,)</versionRange>
										<goals>
											<!-- plugin goals -->
											<goal>compile</goal>
											<goal>test-compile</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<!-- just ignore the plugin -->
										<ignore />
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.asciidoctor</groupId>
										<artifactId>asciidoctor-maven-plugin</artifactId>
										<versionRange>[1.0,)</versionRange>
										<goals>
											<!-- plugin goals -->
											<goal>process-asciidoc</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<!-- just ignore the plugin -->
										<ignore />
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.apache.openjpa</groupId>
										<artifactId>openjpa-maven-plugin</artifactId>
										<versionRange>[3.0,)</versionRange>
										<goals>
											<goal>enhance</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<execute>
											<runOnIncremental>true</runOnIncremental>
										</execute>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

</project>
